GitHub Actionsのデプロイ設定をコメントアウトし、CSRFトークンの保護をApplicationControllerに追加。CORS設定を拡張し、セッションストアのセキュリティを強化。

--- a/.github/workflows/fly-deploy-dev.yml
+++ b/.github/workflows/fly-deploy-dev.yml
@@ -1,9 +1,9 @@
 name: Fly Deploy Development
 
-on:
-  push:
-    branches:
-      - develop
+#on:
+#  push:
+#    branches:
+#      - develop
 
 jobs:
   test:
