--- a/.github/workflows/fly-deploy-staging.yml
+++ b/.github/workflows/fly-deploy-staging.yml
@@ -1,9 +1,9 @@
 name: Fly Deploy Staging
 
-on:
-  push:
-    branches:
-      - staging
+#on:
+#  push:
+#    branches:
+#      - staging
 
 jobs:
   deploy:
